# cube

./: .clang-format  .cmake-project.json  .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO.txt  cmake-project.json  log.txt
cmake/: cubeConfig.cmake.in
docs/: _config.yml  index.html
docs/html/: playground.html
docs/includes/css/: github-markdown.css  style.css
docs/includes/js/: markdown.js  showdown.extensions.js
docs/pages/: class.md  files.md  func.md  getting-started.md  ifloop.md  install.md  op.md  special.md  try.md  var.md
docs/php/: cube.php
examples/: async.cube  class.cube  complex.cube  extensions  extensions.cube  factorial  fatorial  fibonacci.cube  for  for.cube  function  let  let.cube  life.cube  log  log.cube  math  math.cube  native-lib.cube  native.cube  spawn.cube  try-native.cube  try_catch.cube  variables  variables.cube  while  while.cube
samples/: calculator.cube  curl.cube  customserver.cube  flappy_bird.cbpack  life.cube  mandelbrot.cube  pong.cube  simpleclient.cube  simpleserver.cube  ui-calculator.cube  ui-helloworld.cube  webserver.cube
samples/flappy_bird/: Score.cube  main.cube  player.cube  scenes.cube  score.cube
samples/ui/: calculator.ui
src/: CMakeLists.txt  Env.cpp  Env.h  Input.cpp  Input.h  Interpreter.cpp  Interpreter.h  Loader.h  Node.cpp  Node.h  Parser.cpp  Parser.h  RC.h  SP.cpp  SP.h  Tokenizer.cpp  Tokenizer.h  Var.cpp  Var.h  main.cpp
src/exe/: CMakeLists.txt
src/exe/cube/: CMakeLists.txt  (+1 more)
src/exe/dcube/: CMakeLists.txt  debug.c  debug.h  main.c
src/exe/main/: CMakeLists.txt  main.c
src/lib/: CMakeLists.txt
src/lib/calc/: CMakeLists.txt  calc.c  calc.cpp
src/lib/cube/: CMakeLists.txt  ansi_escapes.c  ansi_escapes.h  bytes.c  bytes.h  charset.h  chunk.c  chunk.h  class.c  class.h  collections.c  collections.h  common.h  compiler.c  compiler.h  cube.c  cube.h  cubeext.h  debug.c  debug.h  enums.c  enums.h  files.c  files.h  gc.c  gc.h  linkedList.c  linkedList.h  memory.c  memory.h  mempool.c  mempool.h  mempool_config.h  native.c  native.h  native_posix.c  native_w32.c  object.c  object.h  opcodes.h  (+27 more)
src/lib/cube/transpiler/: var.hpp
src/lib/linenoise/: CMakeLists.txt  linenoise.cpp  linenoise.h  linenoise.hpp
src/lib/stdlib/: CMakeLists.txt
src/lib/stdlib/asio/: CMakeLists.txt
src/lib/stdlib/asio/src/: asio.cpp  asio_cube.hpp  timer.cpp
src/lib/stdlib/asio/src/ip/tcp/: acceptor.cpp  socket.cpp  tcp.cpp
src/lib/stdlib/asio/src/ip/udp/: socket.cpp
src/lib/stdlib/audio/: CMakeLists.txt  audio.c
src/lib/stdlib/audio/libsoundio/: CMakeLists.txt
src/lib/stdlib/bgl/: CMakeLists.txt  bgl.cpp
src/lib/stdlib/cairo/: CMakeLists.txt  cairo.c
src/lib/stdlib/curl/: CMakeLists.txt  curl.c
src/lib/stdlib/cv/: CMakeLists.txt  common.hpp  highgui.cpp  image.cpp  imgproc.cpp  libcv.cpp
src/lib/stdlib/game/: CMakeLists.txt  audio.c  audio.cpp  audio.h  display.cpp  drawing.cpp  drawing.hpp  events.cpp  game.cpp  image.cpp  shapes.cpp
src/lib/stdlib/json/: CMakeLists.txt  Storage.cpp  Storage.h  json.cpp
src/lib/stdlib/ml/: CMakeLists.txt  common.hpp  dataset.cpp  ml.c  ml.cpp  nn.cpp
src/lib/stdlib/mysql/: CMakeLists.txt  mysql.cpp
src/lib/stdlib/mysql/cmake/: FindMySQL.cmake
src/lib/stdlib/net/: CMakeLists.txt  net.cpp
src/lib/stdlib/net/TcpUdpSocket/: CMakeLists.txt  TcpUdpSocket.h
src/lib/stdlib/postgresql/: CMakeLists.txt  postgresql.cpp
src/lib/stdlib/regex/: CMakeLists.txt  regex.c
src/lib/stdlib/ros/: CMakeLists.txt  Storage.cpp  Storage.h  model.cpp  model.hpp  ros.cpp
src/lib/stdlib/sciplot/: CMakeLists.txt  sciplot.cpp
src/lib/stdlib/sciplot/sciplot/: enums.hpp  plot.hpp
src/lib/stdlib/serial/: CMakeLists.txt  serial-unix.c  serial-win.c
src/lib/stdlib/socket/: CMakeLists.txt  socket.cpp
src/lib/stdlib/socket/TcpUdpSocket/: CMakeLists.txt  TcpUdpSocket.cpp  TcpUdpSocket.h
src/lib/stdlib/sqlite/: CMakeLists.txt  sqlite.cpp
src/lib/stdlib/ui/: CMakeLists.txt  Shapes.cpp  Shapes.hpp  WM.cpp  WM.hpp  ui.cpp
src/lib/stdlib/yasML/: CMakeLists.txt  matrices.c  matrices.h  matrix.cpp
src/lib/stdlib/zip/: CMakeLists.txt  kuba-zip.c  kuba-zip.h  miniz.h  zip.c
stdlib/: app.cube  array.cube  asio.cube  audio.cube  bgl.cube  bits.cube  bt.cube  build.cube  cairo.cube  collections.cube  complex.cube  curl.cube  cv.cube  dicts.cube  ds.cube  each.cube  files.cube  fs.cube  ga.cube  game.cube  gc.cube  html.cube  json.cube  libCreator.cube  lists.cube  log.cube  logger.cube  loremIpsum.cube  math.cube  matrix.cube  ml.cube  mysql.cube  net.cube  os.cube  parser.cube  paths.cube  postgresql.cube  query.cube  random.cube  reflection.cube  (+25 more)
stdlib/asio/: asio.cube  timer.cube
stdlib/cv/: highgui.cube  image.cube  imgproc.cube
stdlib/emu/: chip8.cube
stdlib/game/: audio.cube  display.cube  events.cube  image.cube  physics.cube  shapes.cube
stdlib/ui/: shapes.cube  widget.cube
test/: args.cube  async.cube  call_init_explicitly.ccube  class.cube  complex.cube  db.cube  decorator.cube  dict-class.cube  extend.cube  extensions.cube  fibonacci.cube  fn.cube  for.cube  fs-test.cube  guessing-game.cube  guessingGame.cube  heart.cube  hello-world.ccube  import.cube  include.cube  json.cube  let.cube  life.cube  list.cube  log.cube  luhn.cube  mandelbrot.cube  math.cube  matrix.cube  mysql.cube  namespace.cube  native-lib-creator.cube  native-lib.cube  native.cube  package.cube  postgresql.cube  query.cube  reflection.cube  require.cube  rest-client.cube  (+29 more)
test/asio/: client.cube  server.cube  web-server.cube
test/audio/: changeDevices.cube  devices.cube  draw.cube  record.cube  sine.cube
test/bgl/: heart.cube  life.cube  light.cube  obj.cube  paint.cube  plot.cube  robot.cube  snowman.cube  teapot.cube  text.cube  texture.cube  triangle.cube  viewer.cube  webcam.cube
test/data/: earth_ball.mtl  mario.mtl  xor.csv
test/emu/: chip8.cube
test/ml/: csv.cube  pong-nn.cube  pong.cube  quad.cube  sincos.cube  xor.cube
test/ros/: image_pub.cube  test.cube
test/sql/: sdl.cube
test/ui/: ui-json.cube  ui.json  widgets.cube
test/web/: web.cube
(+45 files in other folders)
