add_subdirectory(socket)
add_subdirectory(ui)
add_subdirectory(json)
add_subdirectory(zip)
add_subdirectory(curl)
add_subdirectory(yasML)
add_subdirectory(game)
add_subdirectory(sciplot)
add_subdirectory(sqlite)
add_subdirectory(mysql)
add_subdirectory(postgresql)
add_subdirectory(regex)
add_subdirectory(ml)
add_subdirectory(bgl)
add_subdirectory(cairo)
add_subdirectory(serial)
add_subdirectory(cv)
add_subdirectory(audio)
add_subdirectory(asio)
add_subdirectory(ros)